# amberfish

./: .cvsignore  .gitignore  .project  CREDITS  ChangeLog  INSTALL  LICENSE  Makefile  NOTES  README  README.md  configure  configure.ac  configure.in
.externalToolBuilders/: amberfish_configure.launch  amberfish_make.launch
contrib/packaging/rpm/: amberfish.spec  pdftex.map
contrib/trec/: parsedoc.c  parsetopics.c
doc/: .cvsignore  Makefile  Makefile.in  af.1  afclose.3  afgetresultmd.3  afopen.3  amberfish.adoc  amberfish.texi  docinfo.html  userguide.adoc
src/: .cvsignore  Makefile  Makefile.in  admin.c  admin.cc  admin.h  af.c  af.cc  af.h  af_auto.h  af_auto.h.in  afadmin.cc  afd.c  affetch.cc  afindex.cc  afsearch.cc  afw.h  amberfishd.cc  config.h.in  defs.h  docbuf.cc  docbuf.h  engine.cc  engine.h  erc.c  err.c  err.h  explain.cc  explain.h  fdef.c  fdef.cc  fdef.h  index.c  index.cc  index.h  info.c  info.h  io.h  linbuf.c  linear.c  (+37 more)
src/backend/: Makefile.in  admin.c  af.c  index.c  linbuf.c  linear.c  porter.cc  scan.c  search.c  stem.c  text.c  xml.cc
src/interface/: Makefile.in  README.md  af.cpp  af.h  err.cpp  isearch.cpp  isearch.h  main.cpp  opt.h  rdbms.cpp  rdbms.h  str.cpp  str.h  strtol.c  strtol.h  symtable.c  symtable.h  syntree.cpp  syntree.h  thump.l  thump.ypp
src/thump/: err.h  isearch.cpp  main.cpp  opt.cpp  symtable.c  syntree.cpp  thump.h  thump.ypp
