AC_INIT()

AC_MSG_CHECKING(for VERSION)
if test -f VERSION; then
	af_version=`cat VERSION`
	AC_MSG_RESULT($af_version)
else
	af_version=`date +%Y%m%d`
	AC_MSG_RESULT(no; using $af_version)
fi

AC_PROG_CXX

xml=yes
AC_ARG_ENABLE(xml, [  --disable-xml           disable linking with Xerces and XML support], [
	if test "$enableval" = "no"; then
		xml=no
	fi
] )
AC_MSG_CHECKING(whether xml is enabled)
if test "$xml" = "yes"; then
	AC_MSG_RESULT(yes)
	AC_CHECK_LIB(xerces-c, main)
	AC_CHECK_HEADERS([xercesc/util/XercesVersion.hpp])
else
	AC_MSG_RESULT(no)
fi

AC_CHECK_SIZEOF(short int, 0)
AC_CHECK_SIZEOF(int, 0)
AC_CHECK_SIZEOF(long int, 0)

AC_MSG_NOTICE(creating src/version.h)
echo "#define ETYMON_AF_VERSION \"$af_version\"" > src/version.h
AC_MSG_NOTICE(creating doc/version.texi)
echo "@set VERSION $af_version" > doc/version.texi

AC_CONFIG_HEADER(src/af_auto.h)
AC_CONFIG_FILES(src/Makefile)
AC_CONFIG_FILES(doc/Makefile)

AC_OUTPUT()
